--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Run unit tests
-      run: npm test:unit
+      run: npm run test:unit
     - name: Display softuni unsername
       run: echo "gretaptrv"
