--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,9 +8,7 @@ on:
 
 jobs:
   build_and_unit_test:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js 20.x
@@ -24,3 +22,22 @@ jobs:
       run: npm run test:unit
     - name: Display softuni unsername
       run: echo "gretaptrv"
+
+  ui-tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js 20.x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - name: Install dependencies
+      run: npm install
+    - name: Download Playwright
+      run: npx playwright install
+    - name: Run application
+      run: npm run start &
+    - name: Run ui tests
+      run: npm run test:ui
+
