--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,6 +25,7 @@ jobs:
 
   ui-tests:
     runs-on: ubuntu-latest
+    needs: build_and_unit_test
     steps:
     - uses: actions/checkout@v4
     - name: Use Node.js 20.x
@@ -40,4 +41,13 @@ jobs:
       run: npm run start &
     - name: Run ui tests
       run: npm run test:ui
+  
+  deploy_render:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_ID }}
+          api-key: ${{ secrets.RENDER_TOKEN }}
 
