--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,6 +44,7 @@ jobs:
   
   deploy_render:
     runs-on: ubuntu-latest
+    needs: ui-tests
     steps:
       - name: Deploy
         uses: johnbeynon/render-deploy-action@v0.0.8
